--- a/index.html
+++ b/index.html
@@ -1,14 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- Google tag (gtag.js) -->
+<!-- Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-7QEGV5KYGY"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-7QEGV5KYGY');
+  gtag('config', 'G-7QEGV5KYGY'); // Your GA4 Measurement ID
+
+  // Track button clicks
+  document.addEventListener("click", function(event) {
+      let target = event.target;
+      if (target.tagName === "BUTTON" || target.tagName === "A") {
+          gtag('event', 'button_click', {
+              'button_text': target.innerText || target.getAttribute('aria-label') || 'Unnamed Button'
+          });
+      }
+  });
+
+  // Track video plays
+  document.addEventListener("play", function(event) {
+      if (event.target.tagName === "VIDEO") {
+          gtag('event', 'video_play', {
+              'video_url': event.target.currentSrc
+          });
+      }
+  }, true);
+
+  // Track external link clicks
+  document.addEventListener("click", function(event) {
+      let target = event.target.closest("a");
+      if (target && target.hostname !== location.hostname) {
+          gtag('event', 'outbound_click', {
+              'destination': target.href
+          });
+      }
+  });
+
 </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
